ajout des ancres dans la home page

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -2,6 +2,7 @@ body {
   /* background-color: black; */
   transition: all 0.3s;
   background: #f7f9fc;
+  scroll-behavior: smooth;
 }
 /*                 Debut  section     */
 .barner {
